# pyaccelerator

./: LICENSE  Makefile  README.md  pyproject.toml  test.py  tutorial_1.ipynb
.github/workflows/: pytest.yml
accelerator/: __init__.py  beam.py  constraints.py  lattice.py  sampling.py  transfer_matrix.py  utils.py
accelerator/elements/: __init__.py  base.py  custom.py  dipole.py  drift.py  quadrupole.py  sextupole.py  utils.py
docs/: conf.py  index.rst
notebooks/: dispersion.ipynb  matching.ipynb  transfer_matrix.ipynb  tune.ipynb  utils.ipynb
noteboooks/: Untitled.ipynb  Untitled1.ipynb  beam.ipynb  chromaticity.ipynb  dipole.ipynb  dispersion.ipynb  drift.ipynb  epfl_course_examples.ipynb  lattice.ipynb  lattice_transport.ipynb  matching.ipynb  plotting.ipynb  quadrupole.ipynb  sextupole.ipynb  testing_transport.ipynb  transfer_matrix.ipynb  tune.ipynb  tutorial_1.ipynb  tutorial_2.ipynb  utils.ipynb
pyaccelerator/: __init__.py  constraints.py  utils.py
pyaccelerator/elements/: quadrupole.py
tests/: test_beam.py  test_constraints.py  test_lattice.py  test_transfer_matrix.py  test_transfermatrix.py  test_utils.py
tests/elements/: test_custom.py  test_dipole.py  test_drift.py  test_element_utils.py  test_quadrupole.py  test_sextupole.py
