[tool.poetry]
name = "accelerator"
version = "0.1.0"
description = ""
authors = ["Loic Coyle <loic.coyle <loic.coyle@hotmail.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.0"
matplotlib = "^3.3.0"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
